// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuestionMedia > renders ResponsiveImage for image media when type is not Pin 1`] = `
<div>
  <div
    class="questionMedia"
    data-testid="question-media"
  >
    <img
      alt="cute cat"
      data-effect-type=""
      data-has-countdown="false"
      data-src="https://img/a.jpg"
      data-testid="responsive-image"
    />
  </div>
</div>
`;

exports[`QuestionMedia > renders ResponsivePlayer for audio media 1`] = `
<div>
  <div
    class="questionMedia"
    data-testid="question-media"
  >
    <div
      data-testid="responsive-player"
      data-url="https://cdn/a.mp3"
    />
  </div>
</div>
`;

exports[`QuestionMedia > renders ResponsivePlayer for video media 1`] = `
<div>
  <div
    class="questionMedia"
    data-testid="question-media"
  >
    <div
      data-testid="responsive-player"
      data-url="https://cdn/v.mp4"
    />
  </div>
</div>
`;
